# data-engineering-qaqc

./: .gitignore  Dockerfile  README.md  app.json  develop  entrypoint.sh  example.env  index.py  pyproject.toml  qaqc_outlier.csv  requirements.in  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml  main_subtree.yml
bash/: install_linux_packages.sh  setup_env.sh
dev/: dev_compile_python_packages.sh
src/: constants.py  devdb.py  digital_ocean_client.py  digital_ocean_utils.py  facdb.py  geocode.py  github.py  github_api.py  home.py  pluto.py  postgres_client.py  postgres_utils.py  report_utils.py  source_report_utils.py  ztl.py
src/checkbook/: checkbook.py  helpers.py
src/colp/: colp.py  helpers.py
src/colp/components/: agency_usetype_report.py  geospatial_check.py  manual_correction_report.py  usetype_version_comparison_report.py
src/components/: sidebar.py  sources_report.py
src/cpdb/: adminbounds.py  cpdb.py  helpers.py
src/cpdb/component/: adminbounds.py  withinNYC_check.py
src/cpdb/components/: geometry_visualization_report.py
src/devdb/: devdb.py  helpers.py
src/devdb/components/: complete_quarters_report.py  field_distribution_report.py  flagged_jobs_report.py  (+2 more)
src/edde/: edde.py  helpers.py
src/facdb/: facdb.py  helpers.py
src/gru/: components.py  constants.py  gru.py  helpers.py
src/pluto/: helpers.py  pluto.py
src/ztl/: helpers.py  outputs_report_utils.py  ztl.py
test/: Dockerfile
test/bash/: deploy.sh
tests/: test_github.py  test_io.py  test_source_report.py
(+14 files in other folders)
